# adv-of-code-2023

./: .gitignore  CMakeLists.txt  day_1.cpp  main  run_day.sh  test.cpp
day_1/: day_1.cpp
day_2/: day_2.cpp
day_3/: day_3.cpp  day_3_part_2.cpp  main
day_4/: 4_1.cpp  4_2.cpp
day_5/: 5_1.cpp  5_2.cpp
day_6/: 6_1.cpp  6_2.cpp
